@@ -1,5 +1,5 @@
 package com.qmasters.fila_flex.testController;
-
+import java.util.Arrays;
 import java.util.List;
 import java.util.NoSuchElementException;
 
@@ -8,14 +8,12 @@ import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.doThrow;
-import static org.mockito.Mockito.times;
-import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 import org.mockito.MockitoAnnotations;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 
 import com.qmasters.fila_flex.controller.UserController;
@@ -24,100 +22,110 @@ import com.qmasters.fila_flex.model.User;
 import com.qmasters.fila_flex.service.UserService;
 import com.qmasters.fila_flex.util.UserRole;
 
-class UserControllerTest {
+public class UserControllerTest {
 
     @Mock
     private UserService userService;
 
-    @InjectMocks
     private UserController userController;
 
     @BeforeEach
-    void setUp() {
+    public void setUp() {
         MockitoAnnotations.openMocks(this);
+        userController = new UserController(userService);
     }
 
-    @SuppressWarnings({ "deprecation", "null" })
     @Test
-    void testGetAllUsers_Success() {
+    public void testGetAllUsers_Success() {
         // Arrange
-        User user1 = new User("john@example.com", "password123", UserRole.USER, "John Doe");
-        User user2 = new User("jane@example.com", "password456", UserRole.USER, "Jane Doe");
-        when(userService.findAll()).thenReturn(List.of(user1, user2));
+        User user1 = new User();
+        user1.setId(1L);
+        user1.setName("User One");
+        user1.setEmail("user1@example.com");
+        user1.setRole(UserRole.USER);
+
+        User user2 = new User();
+        user2.setId(2L);
+        user2.setName("User Two");
+        user2.setEmail("user2@example.com");
+        user2.setRole(UserRole.USER);
+
+        List<User> users = Arrays.asList(user1, user2);
+        when(userService.findAll()).thenReturn(users);
 
         // Act
         ResponseEntity<List<User>> response = userController.getAllUsers();
 
         // Assert
-        assertNotNull(response);
-        assertEquals(200, response.getStatusCodeValue());
+        assertEquals(HttpStatus.OK, response.getStatusCode());
         assertEquals(2, response.getBody().size());
-        assertEquals("John Doe", response.getBody().get(0).getName());
-        verify(userService, times(1)).findAll();
-    }
-
-    @SuppressWarnings({ "deprecation", "null" })
-    @Test
-    void testGetUserById_Found() {
-        // Arrange
-        User user = new User("john@example.com", "password123", UserRole.ADMIN, "John Doe");
-        when(userService.findById(1L)).thenReturn(user);
-
-        // Act
-        ResponseEntity<UserResponseDTO> response = userController.getUserById(1L);
-
-        // Assert
-        assertNotNull(response);
-        assertEquals(200, response.getStatusCodeValue());
-        assertEquals("John Doe", response.getBody().getName());
-        verify(userService, times(1)).findById(1L);
     }
 
     @Test
-void testGetUserById_NotFound() {
-    // Arrange
-    when(userService.findById(1L)).thenReturn(null);
-
-    // Act & Assert (capturando a exceção e validando o resultado)
-    NoSuchElementException exception = assertThrows(NoSuchElementException.class, 
-        () -> userController.getUserById(1L)
-    );
-
-    assertEquals("Usuário não encontrado", exception.getMessage());
-    verify(userService, times(1)).findById(1L);
-}
-
-
-    @SuppressWarnings("deprecation")
-    @Test
-    void testDeleteUserById_Success() {
+    public void testGetUserById_UserFound() {
         // Arrange
-        doNothing().when(userService).deleteUser(1L);
+        Long userId = 1L;
+        User user = new User();
+        user.setId(userId);
+        user.setName("Test User");
+        user.setEmail("testuser@example.com");
+        user.setRole(UserRole.USER);
+
+        UserResponseDTO userResponseDTO = new UserResponseDTO(user, Arrays.asList()); // Supondo que não há compromissos
+
+        when(userService.findById(userId)).thenReturn(user);
+        when(userService.getUserWithAppointments(userId)).thenReturn(userResponseDTO);
 
         // Act
-        ResponseEntity<String> response = userController.deleteUserById(1L);
+        ResponseEntity<UserResponseDTO> response = userController.getUserById(userId);
 
         // Assert
-        assertNotNull(response);
-        assertEquals(200, response.getStatusCodeValue());
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertNotNull(response.getBody());
+        assertEquals(userId, response.getBody().getId());
+        assertEquals("Test User", response.getBody().getName());
+    }
+
+    @Test
+    public void testGetUserById_UserNotFound() {
+        // Arrange
+        Long userId = 1L;
+        when(userService.findById(userId)).thenReturn(null);
+
+        // Act & Assert
+        Exception exception = assertThrows(NoSuchElementException.class, () -> {
+            userController.getUserById(userId);
+        });
+
+        assertEquals("Usuário não encontrado", exception.getMessage());
+    }
+
+    @Test
+    public void testDeleteUserById_Success() {
+        // Arrange
+        Long userId = 1L;
+        doNothing().when(userService).deleteUser(userId);
+
+        // Act
+        ResponseEntity<String> response = userController.deleteUserById(userId);
+
+        // Assert
+        assertEquals(HttpStatus.OK, response.getStatusCode());
         assertEquals("Usuário removido com sucesso", response.getBody());
-        verify(userService, times(1)).deleteUser(1L);
     }
 
-    @SuppressWarnings("deprecation")
     @Test
-    void testDeleteUserById_UserNotFound() {
+    public void testDeleteUserById_UserNotFound() {
         // Arrange
-        doThrow(new IllegalArgumentException("Usuário não encontrado, remoção não foi realizada"))
-                .when(userService).deleteUser(1L);
+        Long userId = 1L;
+        doThrow(new IllegalArgumentException("Usuário não encontrado")).when(userService).deleteUser(userId);
 
         // Act
-        ResponseEntity<String> response = userController.deleteUserById(1L);
+        ResponseEntity<String> response = userController.deleteUserById(userId);
 
         // Assert
-        assertNotNull(response);
-        assertEquals(400, response.getStatusCodeValue());
-        assertEquals("Usuário não encontrado, remoção não foi realizada", response.getBody());
-        verify(userService, times(1)).deleteUser(1L);
+        assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
+        assertEquals("Usuário não encontrado", response.getBody());
     }
 }
+
